--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,3 +9,5 @@ global-exclude *.pyc *.o
 # This subpackage is only used in development checkouts
 # and should not be included in built tarballs
 prune asteroid_hunter/_dev
+
+include asteroid_hunter/data/PRAIA/*.f
