--- a/tox.ini
+++ b/tox.ini
@@ -47,12 +47,12 @@ extras =
     test
 
 commands_pre =
-    oldestdeps: minimum_dependencies asteroid_hunter --filename requirements-min.txt
+    oldestdeps: minimum_dependencies cosmotupi --filename requirements-min.txt
     oldestdeps: pip install -r requirements-min.txt
     pip freeze
 
 commands =
-    pytest --pyargs asteroid_hunter --cov asteroid_hunter --cov-report xml:coverage.xml --cov-report term-missing {posargs}
+    pytest --pyargs cosmotupi --cov cosmotupi --cov-report xml:coverage.xml --cov-report term-missing {posargs}
 
 [testenv:build_docs]
 description = invoke sphinx-build to build the HTML docs
